--- a/playbooks/example.yml
+++ b/playbooks/example.yml
@@ -14,5 +14,5 @@
   roles:
     - { role: example }
 
-# vim: set ft=yaml.ansible syn=yaml sw=2 ts=2 et colorcolumn=160 :
+# vim: set ft=yaml.ansible sw=2 ts=2 et colorcolumn=160 :
 # eof
