--- a/roles/requirements.yml
+++ b/roles/requirements.yml
@@ -10,5 +10,5 @@
 #  version: master
 #  name: skeletor
 
-# vim: set ft=yaml.ansible syn=yaml sw=2 ts=2 et colorcolumn=160 :
+# vim: set ft=yaml.ansible sw=2 ts=2 et colorcolumn=160 :
 # eof
