--- a/site.yml
+++ b/site.yml
@@ -8,5 +8,5 @@
 
 # import more
 
-# vim: set ft=yaml.ansible syn=yaml sw=2 ts=2 et colorcolumn=160 :
+# vim: set ft=yaml.ansible sw=2 ts=2 et colorcolumn=160 :
 # eof
