Moved pip+ to core

--- a/requirements-2.10.txt
+++ b/requirements-2.10.txt
@@ -1,7 +1,5 @@
 # core
-pip
-setuptools
-wheel
+-r requirements-core.txt
 
 # ansible
 ansible ~= 2.10.0
@@ -14,5 +12,5 @@ ansible-lint
 # modules
 -r requirements-modules.txt
 
-# vim: set ft=python syn=python sw=2 ts=2 et :
+# vim: set ft=python sw=2 ts=2 et :
 # eof
