refactor: cleanup and path fixes

--- a/ansible.cfg
+++ b/ansible.cfg
@@ -1,7 +1,8 @@
 # ansible.cfg
+# vim: set ft=dosini :
 
 [defaults]
-collections_paths           = collections:collections-devel
+collections_paths           = collections
 display_skipped_hosts       = true
 fact_caching                = jsonfile
 fact_caching_connection     = facts
@@ -9,20 +10,21 @@ fact_caching_timeout        = 3600
 gather_subset               = all
 gathering                   = smart
 host_key_checking           = false
-inventory                   = inventories/hosts.yml
+interpreter_python          = "/usr/bin/env python3"
+inventory                   = inventories/hosts.ini
 keep_remote_files           = false
 localhost_warning           = false
 log_path                    = logs/ansible.log
 no_target_syslog            = true
 nocows                      = true
 retry_files_enabled         = false
-roles_path                  = roles:roles-devel
+roles_path                  = roles
 transport                   = smart
 use_persistent_connections  = true
 
 # mitogen
 #strategy                    = mitogen_linear
-#strategy_plugins            = ${VIRTUAL_ENV}/lib/python3.7/site-packages/ansible_mitogen/plugins/strategy
+#strategy_plugins            = ${VIRTUAL_ENV}/lib/python3.8/site-packages/ansible_mitogen/plugins/strategy
 
 # secrets
 #private_key_file            = ~/.ansible/ssh/id_ed25519
