feat: add ansible 4.4 and cleanup

--- a/requirements-4.4.txt
+++ b/requirements-4.4.txt
@@ -4,11 +4,11 @@
 -r requirements-core.txt
 
 # ansible
-ansible ~= 2.9.0
+ansible ~= 4.4.0
 ansible-lint
 
 # mitogen
-mitogen >= 0.2.9
+#mitogen >= 0.2.9
 
 # molecule
 molecule
