--- a/.gitignore
+++ b/.gitignore
@@ -1,22 +1,67 @@
+# generic
 *.bak
-*.o
+*.core
+*.log
 *.old
 *.orig
 *.rej
+*.sw[p-z]
 *~
-.*.swp
+.#*
+.*.sw[p-z]
+
+# macos
+*.profraw
 .DS_Store
 .VolumeIcon.icns
 
-collections-devel/*
+# windows
+*.lnk
+[Dd]esktop.ini
+[Tt]humbs.db
+
+# c
+*.o
+*.so
+
+# jekyll
+.jekyll-metadata
+.sass-cache/
+_site/
+
+# python
+*.py[cod]
+__pycache__/
+
+# ruby
+Gemfile.lock
+
+# shc
+*.x
+*.x.c
+
+# terraform
+**/.terraform/
+**/terraform.tfstate.d/
+*.tfstate
+*.tfstate.*
+.terraform.lock.hcl
+crash.*.log
+
+# misc
+**/.cache/
+
+# local
 collections/*
 facts/*
 inventories/*
 library/*
 logs/*
-roles-devel/*
 roles/*
 
+!inventories/hosts.ini
+
+# excludes
 !.git
 !.git_keep
 !.gitkeep
