--- a/.editorconfig
+++ b/.editorconfig
@@ -7,14 +7,14 @@ end_of_line = lf
 indent_size = 2
 indent_style = space
 insert_final_newline = true
-max_line_length = 80
+max_line_length = 160
 trim_trailing_whitespace = true
 
-[*.{md,markdown}]
-max_line_length = 80
+[*.{md,markdown,txt}]
+indent_size = 1
+max_line_length = 0
 trim_trailing_whitespace = false
 
-[*.{yml,yaml}]
-indent_size = 2
-indent_style = space
-max_line_length = 160
+[Makefile]
+indent_size = 8
+indent_style = tab
