refactor!: new structure and settings
* refactor: cleanup phase
* refactor: to txt
* chore: markdown lint
* refactor!: keep library only
* refactor: cleanup and path fixes
* feat: add ansible 4.4 and cleanup
* refactor: yml to ini
* chore: import new schema
* refactor: minimize it
* refactor: minimize without interpreter
* feat: add password script

--- a/requirements-2.9.txt
+++ b/requirements-2.9.txt
@@ -1,4 +1,5 @@
 # vim: set ft=python :
+
 # core
 -r requirements-core.txt
 
@@ -8,6 +9,10 @@ ansible-lint
 
 # mitogen
 mitogen >= 0.2.9
+
+# molecule
+molecule
+molecule-docker
 
 # modules
 -r requirements-modules.txt
