refactor!: new default path

--- a/ansible.cfg
+++ b/ansible.cfg
@@ -11,10 +11,10 @@ gather_subset               = all
 gathering                   = smart
 host_key_checking           = false
 interpreter_python          = "/usr/bin/env python3"
-inventory                   = inventories/hosts.ini
+inventory                   = inventory/hosts.ini
 keep_remote_files           = false
 localhost_warning           = false
-log_path                    = logs/ansible.log
+log_path                    = log/ansible.log
 no_target_syslog            = true
 nocows                      = true
 retry_files_enabled         = false
