refactor!: new default path

--- a/ansible.cfg
+++ b/ansible.cfg
@@ -5,7 +5,7 @@
 collections_paths           = collections
 display_skipped_hosts       = true
 fact_caching                = jsonfile
-fact_caching_connection     = facts
+fact_caching_connection     = fact
 fact_caching_timeout        = 3600
 gather_subset               = all
 gathering                   = smart
