feat: add library

--- a/ansible.cfg
+++ b/ansible.cfg
@@ -13,6 +13,7 @@ host_key_checking           = false
 interpreter_python          = "/usr/bin/env python3"
 inventory                   = inventory/hosts.ini
 keep_remote_files           = false
+library                     = library
 localhost_warning           = false
 log_path                    = log/ansible.log
 no_target_syslog            = true
