--- a/requirements-ansible-2.9.txt
+++ b/requirements-ansible-2.9.txt
@@ -1,7 +1,7 @@
 # vim: set ft=python :
 
-# python
--r requirements-python.txt
+# python venv
+-r requirements-python-venv.txt
 
 # ansible
 ansible ~= 2.9.0
